--- a/styles/global.css
+++ b/styles/global.css
@@ -1,4 +1,4 @@
-*,
+ *,
 *::before,
 *::after {
   box-sizing: border-box;
@@ -25,10 +25,20 @@ blockquote {
   padding: 0;
 }
 
+li {
+  list-style-type: none;
+}
+
 a {
   color: inherit;
+  text-decoration: none;
+
 }
 
 img {
   width: 100%;
+}
+
+address {
+  font-style: inherit;
 }
